# MAX1000-Logic-Analyzer

./: .gitignore  FIXES_NOTE.txt  GEN_FIX_REPORT.md  README.md  WEBAPP.md  conftest.py  hw_test_final.txt  hw_test_output.txt  hw_test_v3.txt  output.sr  output_fixed.sr  pyproject.toml  test.ols
MAX1000-fixed/: requirements.txt
archive/: reset_ftdi2.py  temp_24mhz.py  temp_96mhz.py  temp_cap_gen.py  temp_test.py  temp_test2.py  test_cont_capture.py  test_debug_capture.py  test_final_fix.py  test_gen_ch1.py  test_gen_seq.py  test_i2c_original.py  test_i2c_proto.py  test_isolate.py  test_min_i2c.py  test_mirror.py  test_nopins.py  test_spi_char.py  test_spi_cont_capture.py  test_spi_gen.py  test_spi_step.py  test_trace.py  test_uart_mirror.py
backend/: conftest.py  hw_smoke_test.py  requirements.txt  run.py
docs/: MAX1000 User Guide.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
hdl/: ADC_Controller.vhd  Fast_Logic_Analyzer_SDRAM.vhd  LED_Controller.vhd  OLS_Interface.vhd  OLS_Logic_Analyzer.sdc  OLS_Logic_Analyzer.vhdp  OLS_Logic_Analyzer_SDRAM_Core.vhd  OLS_Logic_Analyzer_wrapper.vhd  OLS_SDRAM_Top.vhd  Protocol_Trigger.vhd  README.md  SDRAM_Controller_Custom.vhd  SDRAM_Interface.vhd  Signal_Gen.vhd  build.tcl  compile.ps1
host/: OLS_Console.py  OLS_Logic_Analyzer.qpf  OLS_Logic_Analyzer.qsf  README.md  _test_gen.py  conftest.py  debug_align.py  debug_check_gen.py  debug_decode.py  debug_ftdi.py  debug_gen.py  debug_gen_busy.py  debug_i2c.py  debug_i2c2.py  debug_info.py  debug_readback.py  debug_runs.py  debug_simple.py  ols_spi.py  (+53 more)
(+391 files in other folders)
