[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ols-maxscope"
version = "1.0.0"
description = "OLS Logic Analyzer — Protocol Analyzer & Generator for MAX1000"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.0",
    "pyftdi>=0.55.0",
    "ftd2xx>=1.0.0",
]

[project.scripts]
ols-console = "app.OLS_Console:main"
ols-hw-validation = "app.hw_validation:main"

[tool.pytest.ini_options]
testpaths = ["host/tests", "host/driver/tests"]
norecursedirs = ["host/debug", "archive"]
